# top-down-game

./: .gitignore  CMakeLists.txt
cmake/: embed_shaders.py
shaders/: sprite.frag  sprite.vert
src/: main.cpp
src/engine/: input.h  renderer.cpp  renderer.h  texture.cpp  texture.h  vulkan_core.cpp  vulkan_core.h
src/game/: game.cpp  game.h
